third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/datetime/offset-overflow-hour.stderr
TOML parse error at line 2, column 25
  |
2 | d = 1985-06-18 17:04:07+25:00
  |                         ^
invalid time offset
value is out of range
